APIs/googleapis.com/content/v2.1/javascript-client/README.md
# content_api_for_shopping

ContentApiForShopping - JavaScript client for content_api_for_shopping
Manage your product listings and accounts for Google Shopping
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v2.1
- Package version: v2.1
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install content_api_for_shopping --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your content_api_for_shopping from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var ContentApiForShopping = require('content_api_for_shopping');

var defaultClient = ContentApiForShopping.ApiClient.instance;
// Configure OAuth2 access token for authorization: Oauth2c
var Oauth2c = defaultClient.authentications['Oauth2c'];
Oauth2c.accessToken = "YOUR ACCESS TOKEN"
// Configure OAuth2 access token for authorization: Oauth2
var Oauth2 = defaultClient.authentications['Oauth2'];
Oauth2.accessToken = "YOUR ACCESS TOKEN"

var api = new ContentApiForShopping.AccountsApi()
var opts = {
  'xgafv': "xgafv_example", // {String} V1 error format.
  'accessToken': "accessToken_example", // {String} OAuth access token.
  'alt': "alt_example", // {String} Data format for response.
  'callback': "callback_example", // {String} JSONP
  'fields': "fields_example", // {String} Selector specifying which fields to include in a partial response.
  'key': "key_example", // {String} API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
  'oauthToken': "oauthToken_example", // {String} OAuth 2.0 token for the current user.
  'prettyPrint': true, // {Boolean} Returns response with indentations and line breaks.
  'quotaUser': "quotaUser_example", // {String} Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
  'uploadProtocol': "uploadProtocol_example", // {String} Upload protocol for media (e.g. \"raw\", \"multipart\").
  'uploadType': "uploadType_example" // {String} Legacy upload protocol for media (e.g. \"media\", \"multipart\").
};
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully. Returned data: ' + data);
  }
};
api.contentAccountsAuthinfo(opts, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://shoppingcontent.googleapis.com/content/v2.1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ContentApiForShopping.AccountsApi* | [**contentAccountsAuthinfo**](docs/AccountsApi.md#contentAccountsAuthinfo) | **GET** /accounts/authinfo | 
*ContentApiForShopping.AccountsApi* | [**contentAccountsClaimwebsite**](docs/AccountsApi.md#contentAccountsClaimwebsite) | **POST** /{merchantId}/accounts/{accountId}/claimwebsite | 
*ContentApiForShopping.AccountsApi* | [**contentAccountsCredentialsCreate**](docs/AccountsApi.md#contentAccountsCredentialsCreate) | **POST** /accounts/{accountId}/credentials | 
*ContentApiForShopping.AccountsApi* | [**contentAccountsCustombatch**](docs/AccountsApi.md#contentAccountsCustombatch) | **POST** /accounts/batch | 
*ContentApiForShopping.AccountsApi* | [**contentAccountsDelete**](docs/AccountsApi.md#contentAccountsDelete) | **DELETE** /{merchantId}/accounts/{accountId} | 
*ContentApiForShopping.AccountsApi* | [**contentAccountsGet**](docs/AccountsApi.md#contentAccountsGet) | **GET** /{merchantId}/accounts/{accountId} | 
*ContentApiForShopping.AccountsApi* | [**contentAccountsInsert**](docs/AccountsApi.md#contentAccountsInsert) | **POST** /{merchantId}/accounts | 
*ContentApiForShopping.AccountsApi* | [**contentAccountsLabelsCreate**](docs/AccountsApi.md#contentAccountsLabelsCreate) | **POST** /accounts/{accountId}/labels | 
*ContentApiForShopping.AccountsApi* | [**contentAccountsLabelsDelete**](docs/AccountsApi.md#contentAccountsLabelsDelete) | **DELETE** /accounts/{accountId}/labels/{labelId} | 
*ContentApiForShopping.AccountsApi* | [**contentAccountsLabelsList**](docs/AccountsApi.md#contentAccountsLabelsList) | **GET** /accounts/{accountId}/labels | 
*ContentApiForShopping.AccountsApi* | [**contentAccountsLabelsPatch**](docs/AccountsApi.md#contentAccountsLabelsPatch) | **PATCH** /accounts/{accountId}/labels/{labelId} | 
*ContentApiForShopping.AccountsApi* | [**contentAccountsLink**](docs/AccountsApi.md#contentAccountsLink) | **POST** /{merchantId}/accounts/{accountId}/link | 
*ContentApiForShopping.AccountsApi* | [**contentAccountsList**](docs/AccountsApi.md#contentAccountsList) | **GET** /{merchantId}/accounts | 
*ContentApiForShopping.AccountsApi* | [**contentAccountsListlinks**](docs/AccountsApi.md#contentAccountsListlinks) | **GET** /{merchantId}/accounts/{accountId}/listlinks | 
*ContentApiForShopping.AccountsApi* | [**contentAccountsRequestphoneverification**](docs/AccountsApi.md#contentAccountsRequestphoneverification) | **POST** /{merchantId}/accounts/{accountId}/requestphoneverification | 
*ContentApiForShopping.AccountsApi* | [**contentAccountsReturncarrierCreate**](docs/AccountsApi.md#contentAccountsReturncarrierCreate) | **POST** /accounts/{accountId}/returncarrier | 
*ContentApiForShopping.AccountsApi* | [**contentAccountsReturncarrierDelete**](docs/AccountsApi.md#contentAccountsReturncarrierDelete) | **DELETE** /accounts/{accountId}/returncarrier/{carrierAccountId} | 
*ContentApiForShopping.AccountsApi* | [**contentAccountsReturncarrierList**](docs/AccountsApi.md#contentAccountsReturncarrierList) | **GET** /accounts/{accountId}/returncarrier | 
*ContentApiForShopping.AccountsApi* | [**contentAccountsReturncarrierPatch**](docs/AccountsApi.md#contentAccountsReturncarrierPatch) | **PATCH** /accounts/{accountId}/returncarrier/{carrierAccountId} | 
*ContentApiForShopping.AccountsApi* | [**contentAccountsUpdate**](docs/AccountsApi.md#contentAccountsUpdate) | **PUT** /{merchantId}/accounts/{accountId} | 
*ContentApiForShopping.AccountsApi* | [**contentAccountsUpdatelabels**](docs/AccountsApi.md#contentAccountsUpdatelabels) | **POST** /{merchantId}/accounts/{accountId}/updatelabels | 
*ContentApiForShopping.AccountsApi* | [**contentAccountsVerifyphonenumber**](docs/AccountsApi.md#contentAccountsVerifyphonenumber) | **POST** /{merchantId}/accounts/{accountId}/verifyphonenumber | 
*ContentApiForShopping.AccountstatusesApi* | [**contentAccountstatusesCustombatch**](docs/AccountstatusesApi.md#contentAccountstatusesCustombatch) | **POST** /accountstatuses/batch | 
*ContentApiForShopping.AccountstatusesApi* | [**contentAccountstatusesGet**](docs/AccountstatusesApi.md#contentAccountstatusesGet) | **GET** /{merchantId}/accountstatuses/{accountId} | 
*ContentApiForShopping.AccountstatusesApi* | [**contentAccountstatusesList**](docs/AccountstatusesApi.md#contentAccountstatusesList) | **GET** /{merchantId}/accountstatuses | 
*ContentApiForShopping.AccounttaxApi* | [**contentAccounttaxCustombatch**](docs/AccounttaxApi.md#contentAccounttaxCustombatch) | **POST** /accounttax/batch | 
*ContentApiForShopping.AccounttaxApi* | [**contentAccounttaxGet**](docs/AccounttaxApi.md#contentAccounttaxGet) | **GET** /{merchantId}/accounttax/{accountId} | 
*ContentApiForShopping.AccounttaxApi* | [**contentAccounttaxList**](docs/AccounttaxApi.md#contentAccounttaxList) | **GET** /{merchantId}/accounttax | 
*ContentApiForShopping.AccounttaxApi* | [**contentAccounttaxUpdate**](docs/AccounttaxApi.md#contentAccounttaxUpdate) | **PUT** /{merchantId}/accounttax/{accountId} | 
*ContentApiForShopping.BuyongoogleprogramsApi* | [**contentBuyongoogleprogramsActivate**](docs/BuyongoogleprogramsApi.md#contentBuyongoogleprogramsActivate) | **POST** /{merchantId}/buyongoogleprograms/{regionCode}/activate | 
*ContentApiForShopping.BuyongoogleprogramsApi* | [**contentBuyongoogleprogramsGet**](docs/BuyongoogleprogramsApi.md#contentBuyongoogleprogramsGet) | **GET** /{merchantId}/buyongoogleprograms/{regionCode} | 
*ContentApiForShopping.BuyongoogleprogramsApi* | [**contentBuyongoogleprogramsOnboard**](docs/BuyongoogleprogramsApi.md#contentBuyongoogleprogramsOnboard) | **POST** /{merchantId}/buyongoogleprograms/{regionCode}/onboard | 
*ContentApiForShopping.BuyongoogleprogramsApi* | [**contentBuyongoogleprogramsPatch**](docs/BuyongoogleprogramsApi.md#contentBuyongoogleprogramsPatch) | **PATCH** /{merchantId}/buyongoogleprograms/{regionCode} | 
*ContentApiForShopping.BuyongoogleprogramsApi* | [**contentBuyongoogleprogramsPause**](docs/BuyongoogleprogramsApi.md#contentBuyongoogleprogramsPause) | **POST** /{merchantId}/buyongoogleprograms/{regionCode}/pause | 
*ContentApiForShopping.BuyongoogleprogramsApi* | [**contentBuyongoogleprogramsRequestreview**](docs/BuyongoogleprogramsApi.md#contentBuyongoogleprogramsRequestreview) | **POST** /{merchantId}/buyongoogleprograms/{regionCode}/requestreview | 
*ContentApiForShopping.CollectionsApi* | [**contentCollectionsCreate**](docs/CollectionsApi.md#contentCollectionsCreate) | **POST** /{merchantId}/collections | 
*ContentApiForShopping.CollectionsApi* | [**contentCollectionsDelete**](docs/CollectionsApi.md#contentCollectionsDelete) | **DELETE** /{merchantId}/collections/{collectionId} | 
*ContentApiForShopping.CollectionsApi* | [**contentCollectionsGet**](docs/CollectionsApi.md#contentCollectionsGet) | **GET** /{merchantId}/collections/{collectionId} | 
*ContentApiForShopping.CollectionsApi* | [**contentCollectionsList**](docs/CollectionsApi.md#contentCollectionsList) | **GET** /{merchantId}/collections | 
*ContentApiForShopping.CollectionstatusesApi* | [**contentCollectionstatusesGet**](docs/CollectionstatusesApi.md#contentCollectionstatusesGet) | **GET** /{merchantId}/collectionstatuses/{collectionId} | 
*ContentApiForShopping.CollectionstatusesApi* | [**contentCollectionstatusesList**](docs/CollectionstatusesApi.md#contentCollectionstatusesList) | **GET** /{merchantId}/collectionstatuses | 
*ContentApiForShopping.ConversionsourcesApi* | [**contentConversionsourcesCreate**](docs/ConversionsourcesApi.md#contentConversionsourcesCreate) | **POST** /{merchantId}/conversionsources | 
*ContentApiForShopping.ConversionsourcesApi* | [**contentConversionsourcesDelete**](docs/ConversionsourcesApi.md#contentConversionsourcesDelete) | **DELETE** /{merchantId}/conversionsources/{conversionSourceId} | 
*ContentApiForShopping.ConversionsourcesApi* | [**contentConversionsourcesGet**](docs/ConversionsourcesApi.md#contentConversionsourcesGet) | **GET** /{merchantId}/conversionsources/{conversionSourceId} | 
*ContentApiForShopping.ConversionsourcesApi* | [**contentConversionsourcesList**](docs/ConversionsourcesApi.md#contentConversionsourcesList) | **GET** /{merchantId}/conversionsources | 
*ContentApiForShopping.ConversionsourcesApi* | [**contentConversionsourcesPatch**](docs/ConversionsourcesApi.md#contentConversionsourcesPatch) | **PATCH** /{merchantId}/conversionsources/{conversionSourceId} | 
*ContentApiForShopping.ConversionsourcesApi* | [**contentConversionsourcesUndelete**](docs/ConversionsourcesApi.md#contentConversionsourcesUndelete) | **POST** /{merchantId}/conversionsources/{conversionSourceId}:undelete | 
*ContentApiForShopping.CssesApi* | [**contentCssesGet**](docs/CssesApi.md#contentCssesGet) | **GET** /{cssGroupId}/csses/{cssDomainId} | 
*ContentApiForShopping.CssesApi* | [**contentCssesList**](docs/CssesApi.md#contentCssesList) | **GET** /{cssGroupId}/csses | 
*ContentApiForShopping.CssesApi* | [**contentCssesUpdatelabels**](docs/CssesApi.md#contentCssesUpdatelabels) | **POST** /{cssGroupId}/csses/{cssDomainId}/updatelabels | 
*ContentApiForShopping.DatafeedsApi* | [**contentDatafeedsCustombatch**](docs/DatafeedsApi.md#contentDatafeedsCustombatch) | **POST** /datafeeds/batch | 
*ContentApiForShopping.DatafeedsApi* | [**contentDatafeedsDelete**](docs/DatafeedsApi.md#contentDatafeedsDelete) | **DELETE** /{merchantId}/datafeeds/{datafeedId} | 
*ContentApiForShopping.DatafeedsApi* | [**contentDatafeedsFetchnow**](docs/DatafeedsApi.md#contentDatafeedsFetchnow) | **POST** /{merchantId}/datafeeds/{datafeedId}/fetchNow | 
*ContentApiForShopping.DatafeedsApi* | [**contentDatafeedsGet**](docs/DatafeedsApi.md#contentDatafeedsGet) | **GET** /{merchantId}/datafeeds/{datafeedId} | 
*ContentApiForShopping.DatafeedsApi* | [**contentDatafeedsInsert**](docs/DatafeedsApi.md#contentDatafeedsInsert) | **POST** /{merchantId}/datafeeds | 
*ContentApiForShopping.DatafeedsApi* | [**contentDatafeedsList**](docs/DatafeedsApi.md#contentDatafeedsList) | **GET** /{merchantId}/datafeeds | 
*ContentApiForShopping.DatafeedsApi* | [**contentDatafeedsUpdate**](docs/DatafeedsApi.md#contentDatafeedsUpdate) | **PUT** /{merchantId}/datafeeds/{datafeedId} | 
*ContentApiForShopping.DatafeedstatusesApi* | [**contentDatafeedstatusesCustombatch**](docs/DatafeedstatusesApi.md#contentDatafeedstatusesCustombatch) | **POST** /datafeedstatuses/batch | 
*ContentApiForShopping.DatafeedstatusesApi* | [**contentDatafeedstatusesGet**](docs/DatafeedstatusesApi.md#contentDatafeedstatusesGet) | **GET** /{merchantId}/datafeedstatuses/{datafeedId} | 
*ContentApiForShopping.DatafeedstatusesApi* | [**contentDatafeedstatusesList**](docs/DatafeedstatusesApi.md#contentDatafeedstatusesList) | **GET** /{merchantId}/datafeedstatuses | 
*ContentApiForShopping.FreelistingsprogramApi* | [**contentFreelistingsprogramCheckoutsettingsDelete**](docs/FreelistingsprogramApi.md#contentFreelistingsprogramCheckoutsettingsDelete) | **DELETE** /{merchantId}/freelistingsprogram/checkoutsettings | 
*ContentApiForShopping.FreelistingsprogramApi* | [**contentFreelistingsprogramCheckoutsettingsGet**](docs/FreelistingsprogramApi.md#contentFreelistingsprogramCheckoutsettingsGet) | **GET** /{merchantId}/freelistingsprogram/checkoutsettings | 
*ContentApiForShopping.FreelistingsprogramApi* | [**contentFreelistingsprogramCheckoutsettingsInsert**](docs/FreelistingsprogramApi.md#contentFreelistingsprogramCheckoutsettingsInsert) | **POST** /{merchantId}/freelistingsprogram/checkoutsettings | 
*ContentApiForShopping.FreelistingsprogramApi* | [**contentFreelistingsprogramGet**](docs/FreelistingsprogramApi.md#contentFreelistingsprogramGet) | **GET** /{merchantId}/freelistingsprogram | 
*ContentApiForShopping.FreelistingsprogramApi* | [**contentFreelistingsprogramRequestreview**](docs/FreelistingsprogramApi.md#contentFreelistingsprogramRequestreview) | **POST** /{merchantId}/freelistingsprogram/requestreview | 
*ContentApiForShopping.LiasettingsApi* | [**contentLiasettingsCustombatch**](docs/LiasettingsApi.md#contentLiasettingsCustombatch) | **POST** /liasettings/batch | 
*ContentApiForShopping.LiasettingsApi* | [**contentLiasettingsGet**](docs/LiasettingsApi.md#contentLiasettingsGet) | **GET** /{merchantId}/liasettings/{accountId} | 
*ContentApiForShopping.LiasettingsApi* | [**contentLiasettingsGetaccessiblegmbaccounts**](docs/LiasettingsApi.md#contentLiasettingsGetaccessiblegmbaccounts) | **GET** /{merchantId}/liasettings/{accountId}/accessiblegmbaccounts | 
*ContentApiForShopping.LiasettingsApi* | [**contentLiasettingsList**](docs/LiasettingsApi.md#contentLiasettingsList) | **GET** /{merchantId}/liasettings | 
*ContentApiForShopping.LiasettingsApi* | [**contentLiasettingsListposdataproviders**](docs/LiasettingsApi.md#contentLiasettingsListposdataproviders) | **GET** /liasettings/posdataproviders | 
*ContentApiForShopping.LiasettingsApi* | [**contentLiasettingsRequestgmbaccess**](docs/LiasettingsApi.md#contentLiasettingsRequestgmbaccess) | **POST** /{merchantId}/liasettings/{accountId}/requestgmbaccess | 
*ContentApiForShopping.LiasettingsApi* | [**contentLiasettingsRequestinventoryverification**](docs/LiasettingsApi.md#contentLiasettingsRequestinventoryverification) | **POST** /{merchantId}/liasettings/{accountId}/requestinventoryverification/{country} | 
*ContentApiForShopping.LiasettingsApi* | [**contentLiasettingsSetinventoryverificationcontact**](docs/LiasettingsApi.md#contentLiasettingsSetinventoryverificationcontact) | **POST** /{merchantId}/liasettings/{accountId}/setinventoryverificationcontact | 
*ContentApiForShopping.LiasettingsApi* | [**contentLiasettingsSetomnichannelexperience**](docs/LiasettingsApi.md#contentLiasettingsSetomnichannelexperience) | **POST** /{merchantId}/liasettings/{accountId}/setomnichannelexperience | 
*ContentApiForShopping.LiasettingsApi* | [**contentLiasettingsSetposdataprovider**](docs/LiasettingsApi.md#contentLiasettingsSetposdataprovider) | **POST** /{merchantId}/liasettings/{accountId}/setposdataprovider | 
*ContentApiForShopping.LiasettingsApi* | [**contentLiasettingsUpdate**](docs/LiasettingsApi.md#contentLiasettingsUpdate) | **PUT** /{merchantId}/liasettings/{accountId} | 
*ContentApiForShopping.LocalinventoryApi* | [**contentLocalinventoryCustombatch**](docs/LocalinventoryApi.md#contentLocalinventoryCustombatch) | **POST** /localinventory/batch | 
*ContentApiForShopping.LocalinventoryApi* | [**contentLocalinventoryInsert**](docs/LocalinventoryApi.md#contentLocalinventoryInsert) | **POST** /{merchantId}/products/{productId}/localinventory | 
*ContentApiForShopping.MerchantsupportApi* | [**contentMerchantsupportRenderaccountissues**](docs/MerchantsupportApi.md#contentMerchantsupportRenderaccountissues) | **POST** /{merchantId}/merchantsupport/renderaccountissues | 
*ContentApiForShopping.MerchantsupportApi* | [**contentMerchantsupportRenderproductissues**](docs/MerchantsupportApi.md#contentMerchantsupportRenderproductissues) | **POST** /{merchantId}/merchantsupport/renderproductissues/{productId} | 
*ContentApiForShopping.OrderinvoicesApi* | [**contentOrderinvoicesCreatechargeinvoice**](docs/OrderinvoicesApi.md#contentOrderinvoicesCreatechargeinvoice) | **POST** /{merchantId}/orderinvoices/{orderId}/createChargeInvoice | 
*ContentApiForShopping.OrderinvoicesApi* | [**contentOrderinvoicesCreaterefundinvoice**](docs/OrderinvoicesApi.md#contentOrderinvoicesCreaterefundinvoice) | **POST** /{merchantId}/orderinvoices/{orderId}/createRefundInvoice | 
*ContentApiForShopping.OrderreportsApi* | [**contentOrderreportsListdisbursements**](docs/OrderreportsApi.md#contentOrderreportsListdisbursements) | **GET** /{merchantId}/orderreports/disbursements | 
*ContentApiForShopping.OrderreportsApi* | [**contentOrderreportsListtransactions**](docs/OrderreportsApi.md#contentOrderreportsListtransactions) | **GET** /{merchantId}/orderreports/disbursements/{disbursementId}/transactions | 
*ContentApiForShopping.OrderreturnsApi* | [**contentOrderreturnsAcknowledge**](docs/OrderreturnsApi.md#contentOrderreturnsAcknowledge) | **POST** /{merchantId}/orderreturns/{returnId}/acknowledge | 
*ContentApiForShopping.OrderreturnsApi* | [**contentOrderreturnsCreateorderreturn**](docs/OrderreturnsApi.md#contentOrderreturnsCreateorderreturn) | **POST** /{merchantId}/orderreturns/createOrderReturn | 
*ContentApiForShopping.OrderreturnsApi* | [**contentOrderreturnsGet**](docs/OrderreturnsApi.md#contentOrderreturnsGet) | **GET** /{merchantId}/orderreturns/{returnId} | 
*ContentApiForShopping.OrderreturnsApi* | [**contentOrderreturnsLabelsCreate**](docs/OrderreturnsApi.md#contentOrderreturnsLabelsCreate) | **POST** /{merchantId}/orderreturns/{returnId}/labels | 
*ContentApiForShopping.OrderreturnsApi* | [**contentOrderreturnsList**](docs/OrderreturnsApi.md#contentOrderreturnsList) | **GET** /{merchantId}/orderreturns | 
*ContentApiForShopping.OrderreturnsApi* | [**contentOrderreturnsProcess**](docs/OrderreturnsApi.md#contentOrderreturnsProcess) | **POST** /{merchantId}/orderreturns/{returnId}/process | 
*ContentApiForShopping.OrdersApi* | [**contentOrdersAcknowledge**](docs/OrdersApi.md#contentOrdersAcknowledge) | **POST** /{merchantId}/orders/{orderId}/acknowledge | 
*ContentApiForShopping.OrdersApi* | [**contentOrdersAdvancetestorder**](docs/OrdersApi.md#contentOrdersAdvancetestorder) | **POST** /{merchantId}/testorders/{orderId}/advance | 
*ContentApiForShopping.OrdersApi* | [**contentOrdersCancel**](docs/OrdersApi.md#contentOrdersCancel) | **POST** /{merchantId}/orders/{orderId}/cancel | 
*ContentApiForShopping.OrdersApi* | [**contentOrdersCancellineitem**](docs/OrdersApi.md#contentOrdersCancellineitem) | **POST** /{merchantId}/orders/{orderId}/cancelLineItem | 
*ContentApiForShopping.OrdersApi* | [**contentOrdersCanceltestorderbycustomer**](docs/OrdersApi.md#contentOrdersCanceltestorderbycustomer) | **POST** /{merchantId}/testorders/{orderId}/cancelByCustomer | 
*ContentApiForShopping.OrdersApi* | [**contentOrdersCaptureOrder**](docs/OrdersApi.md#contentOrdersCaptureOrder) | **POST** /{merchantId}/orders/{orderId}/captureOrder | 
*ContentApiForShopping.OrdersApi* | [**contentOrdersCreatetestorder**](docs/OrdersApi.md#contentOrdersCreatetestorder) | **POST** /{merchantId}/testorders | 
*ContentApiForShopping.OrdersApi* | [**contentOrdersCreatetestreturn**](docs/OrdersApi.md#contentOrdersCreatetestreturn) | **POST** /{merchantId}/orders/{orderId}/testreturn | 
*ContentApiForShopping.OrdersApi* | [**contentOrdersGet**](docs/OrdersApi.md#contentOrdersGet) | **GET** /{merchantId}/orders/{orderId} | 
*ContentApiForShopping.OrdersApi* | [**contentOrdersGetbymerchantorderid**](docs/OrdersApi.md#contentOrdersGetbymerchantorderid) | **GET** /{merchantId}/ordersbymerchantid/{merchantOrderId} | 
*ContentApiForShopping.OrdersApi* | [**contentOrdersGettestordertemplate**](docs/OrdersApi.md#contentOrdersGettestordertemplate) | **GET** /{merchantId}/testordertemplates/{templateName} | 
*ContentApiForShopping.OrdersApi* | [**contentOrdersInstorerefundlineitem**](docs/OrdersApi.md#contentOrdersInstorerefundlineitem) | **POST** /{merchantId}/orders/{orderId}/inStoreRefundLineItem | 
*ContentApiForShopping.OrdersApi* | [**contentOrdersList**](docs/OrdersApi.md#contentOrdersList) | **GET** /{merchantId}/orders | 
*ContentApiForShopping.OrdersApi* | [**contentOrdersRefunditem**](docs/OrdersApi.md#contentOrdersRefunditem) | **POST** /{merchantId}/orders/{orderId}/refunditem | 
*ContentApiForShopping.OrdersApi* | [**contentOrdersRefundorder**](docs/OrdersApi.md#contentOrdersRefundorder) | **POST** /{merchantId}/orders/{orderId}/refundorder | 
*ContentApiForShopping.OrdersApi* | [**contentOrdersRejectreturnlineitem**](docs/OrdersApi.md#contentOrdersRejectreturnlineitem) | **POST** /{merchantId}/orders/{orderId}/rejectReturnLineItem | 
*ContentApiForShopping.OrdersApi* | [**contentOrdersReturnrefundlineitem**](docs/OrdersApi.md#contentOrdersReturnrefundlineitem) | **POST** /{merchantId}/orders/{orderId}/returnRefundLineItem | 
*ContentApiForShopping.OrdersApi* | [**contentOrdersSetlineitemmetadata**](docs/OrdersApi.md#contentOrdersSetlineitemmetadata) | **POST** /{merchantId}/orders/{orderId}/setLineItemMetadata | 
*ContentApiForShopping.OrdersApi* | [**contentOrdersShiplineitems**](docs/OrdersApi.md#contentOrdersShiplineitems) | **POST** /{merchantId}/orders/{orderId}/shipLineItems | 
*ContentApiForShopping.OrdersApi* | [**contentOrdersUpdatelineitemshippingdetails**](docs/OrdersApi.md#contentOrdersUpdatelineitemshippingdetails) | **POST** /{merchantId}/orders/{orderId}/updateLineItemShippingDetails | 
*ContentApiForShopping.OrdersApi* | [**contentOrdersUpdatemerchantorderid**](docs/OrdersApi.md#contentOrdersUpdatemerchantorderid) | **POST** /{merchantId}/orders/{orderId}/updateMerchantOrderId | 
*ContentApiForShopping.OrdersApi* | [**contentOrdersUpdateshipment**](docs/OrdersApi.md#contentOrdersUpdateshipment) | **POST** /{merchantId}/orders/{orderId}/updateShipment | 
*ContentApiForShopping.OrdertrackingsignalsApi* | [**contentOrdertrackingsignalsCreate**](docs/OrdertrackingsignalsApi.md#contentOrdertrackingsignalsCreate) | **POST** /{merchantId}/ordertrackingsignals | 
*ContentApiForShopping.PosApi* | [**contentPosCustombatch**](docs/PosApi.md#contentPosCustombatch) | **POST** /pos/batch | 
*ContentApiForShopping.PosApi* | [**contentPosDelete**](docs/PosApi.md#contentPosDelete) | **DELETE** /{merchantId}/pos/{targetMerchantId}/store/{storeCode} | 
*ContentApiForShopping.PosApi* | [**contentPosGet**](docs/PosApi.md#contentPosGet) | **GET** /{merchantId}/pos/{targetMerchantId}/store/{storeCode} | 
*ContentApiForShopping.PosApi* | [**contentPosInsert**](docs/PosApi.md#contentPosInsert) | **POST** /{merchantId}/pos/{targetMerchantId}/store | 
*ContentApiForShopping.PosApi* | [**contentPosInventory**](docs/PosApi.md#contentPosInventory) | **POST** /{merchantId}/pos/{targetMerchantId}/inventory | 
*ContentApiForShopping.PosApi* | [**contentPosList**](docs/PosApi.md#contentPosList) | **GET** /{merchantId}/pos/{targetMerchantId}/store | 
*ContentApiForShopping.PosApi* | [**contentPosSale**](docs/PosApi.md#contentPosSale) | **POST** /{merchantId}/pos/{targetMerchantId}/sale | 
*ContentApiForShopping.ProductdeliverytimeApi* | [**contentProductdeliverytimeCreate**](docs/ProductdeliverytimeApi.md#contentProductdeliverytimeCreate) | **POST** /{merchantId}/productdeliverytime | 
*ContentApiForShopping.ProductdeliverytimeApi* | [**contentProductdeliverytimeDelete**](docs/ProductdeliverytimeApi.md#contentProductdeliverytimeDelete) | **DELETE** /{merchantId}/productdeliverytime/{productId} | 
*ContentApiForShopping.ProductdeliverytimeApi* | [**contentProductdeliverytimeGet**](docs/ProductdeliverytimeApi.md#contentProductdeliverytimeGet) | **GET** /{merchantId}/productdeliverytime/{productId} | 
*ContentApiForShopping.ProductsApi* | [**contentProductsCustombatch**](docs/ProductsApi.md#contentProductsCustombatch) | **POST** /products/batch | 
*ContentApiForShopping.ProductsApi* | [**contentProductsDelete**](docs/ProductsApi.md#contentProductsDelete) | **DELETE** /{merchantId}/products/{productId} | 
*ContentApiForShopping.ProductsApi* | [**contentProductsGet**](docs/ProductsApi.md#contentProductsGet) | **GET** /{merchantId}/products/{productId} | 
*ContentApiForShopping.ProductsApi* | [**contentProductsInsert**](docs/ProductsApi.md#contentProductsInsert) | **POST** /{merchantId}/products | 
*ContentApiForShopping.ProductsApi* | [**contentProductsList**](docs/ProductsApi.md#contentProductsList) | **GET** /{merchantId}/products | 
*ContentApiForShopping.ProductsApi* | [**contentProductsUpdate**](docs/ProductsApi.md#contentProductsUpdate) | **PATCH** /{merchantId}/products/{productId} | 
*ContentApiForShopping.ProductstatusesApi* | [**contentProductstatusesCustombatch**](docs/ProductstatusesApi.md#contentProductstatusesCustombatch) | **POST** /productstatuses/batch | 
*ContentApiForShopping.ProductstatusesApi* | [**contentProductstatusesGet**](docs/ProductstatusesApi.md#contentProductstatusesGet) | **GET** /{merchantId}/productstatuses/{productId} | 
*ContentApiForShopping.ProductstatusesApi* | [**contentProductstatusesList**](docs/ProductstatusesApi.md#contentProductstatusesList) | **GET** /{merchantId}/productstatuses | 
*ContentApiForShopping.PromotionsApi* | [**contentPromotionsCreate**](docs/PromotionsApi.md#contentPromotionsCreate) | **POST** /{merchantId}/promotions | 
*ContentApiForShopping.PromotionsApi* | [**contentPromotionsGet**](docs/PromotionsApi.md#contentPromotionsGet) | **GET** /{merchantId}/promotions/{id} | 
*ContentApiForShopping.PromotionsApi* | [**contentPromotionsList**](docs/PromotionsApi.md#contentPromotionsList) | **GET** /{merchantId}/promotions | 
*ContentApiForShopping.PubsubnotificationsettingsApi* | [**contentPubsubnotificationsettingsGet**](docs/PubsubnotificationsettingsApi.md#contentPubsubnotificationsettingsGet) | **GET** /{merchantId}/pubsubnotificationsettings | 
*ContentApiForShopping.PubsubnotificationsettingsApi* | [**contentPubsubnotificationsettingsUpdate**](docs/PubsubnotificationsettingsApi.md#contentPubsubnotificationsettingsUpdate) | **PUT** /{merchantId}/pubsubnotificationsettings | 
*ContentApiForShopping.QuotasApi* | [**contentQuotasList**](docs/QuotasApi.md#contentQuotasList) | **GET** /{merchantId}/quotas | 
*ContentApiForShopping.RecommendationsApi* | [**contentRecommendationsGenerate**](docs/RecommendationsApi.md#contentRecommendationsGenerate) | **GET** /{merchantId}/recommendations/generate | 
*ContentApiForShopping.RecommendationsApi* | [**contentRecommendationsReportInteraction**](docs/RecommendationsApi.md#contentRecommendationsReportInteraction) | **POST** /{merchantId}/recommendations/reportInteraction | 
*ContentApiForShopping.RegionalinventoryApi* | [**contentRegionalinventoryCustombatch**](docs/RegionalinventoryApi.md#contentRegionalinventoryCustombatch) | **POST** /regionalinventory/batch | 
*ContentApiForShopping.RegionalinventoryApi* | [**contentRegionalinventoryInsert**](docs/RegionalinventoryApi.md#contentRegionalinventoryInsert) | **POST** /{merchantId}/products/{productId}/regionalinventory | 
*ContentApiForShopping.RegionsApi* | [**contentRegionsCreate**](docs/RegionsApi.md#contentRegionsCreate) | **POST** /{merchantId}/regions | 
*ContentApiForShopping.RegionsApi* | [**contentRegionsDelete**](docs/RegionsApi.md#contentRegionsDelete) | **DELETE** /{merchantId}/regions/{regionId} | 
*ContentApiForShopping.RegionsApi* | [**contentRegionsGet**](docs/RegionsApi.md#contentRegionsGet) | **GET** /{merchantId}/regions/{regionId} | 
*ContentApiForShopping.RegionsApi* | [**contentRegionsList**](docs/RegionsApi.md#contentRegionsList) | **GET** /{merchantId}/regions | 
*ContentApiForShopping.RegionsApi* | [**contentRegionsPatch**](docs/RegionsApi.md#contentRegionsPatch) | **PATCH** /{merchantId}/regions/{regionId} | 
*ContentApiForShopping.ReportsApi* | [**contentReportsSearch**](docs/ReportsApi.md#contentReportsSearch) | **POST** /{merchantId}/reports/search | 
*ContentApiForShopping.ReturnaddressApi* | [**contentReturnaddressCustombatch**](docs/ReturnaddressApi.md#contentReturnaddressCustombatch) | **POST** /returnaddress/batch | 
*ContentApiForShopping.ReturnaddressApi* | [**contentReturnaddressDelete**](docs/ReturnaddressApi.md#contentReturnaddressDelete) | **DELETE** /{merchantId}/returnaddress/{returnAddressId} | 
*ContentApiForShopping.ReturnaddressApi* | [**contentReturnaddressGet**](docs/ReturnaddressApi.md#contentReturnaddressGet) | **GET** /{merchantId}/returnaddress/{returnAddressId} | 
*ContentApiForShopping.ReturnaddressApi* | [**contentReturnaddressInsert**](docs/ReturnaddressApi.md#contentReturnaddressInsert) | **POST** /{merchantId}/returnaddress | 
*ContentApiForShopping.ReturnaddressApi* | [**contentReturnaddressList**](docs/ReturnaddressApi.md#contentReturnaddressList) | **GET** /{merchantId}/returnaddress | 
*ContentApiForShopping.ReturnpolicyApi* | [**contentReturnpolicyCustombatch**](docs/ReturnpolicyApi.md#contentReturnpolicyCustombatch) | **POST** /returnpolicy/batch | 
*ContentApiForShopping.ReturnpolicyApi* | [**contentReturnpolicyDelete**](docs/ReturnpolicyApi.md#contentReturnpolicyDelete) | **DELETE** /{merchantId}/returnpolicy/{returnPolicyId} | 
*ContentApiForShopping.ReturnpolicyApi* | [**contentReturnpolicyGet**](docs/ReturnpolicyApi.md#contentReturnpolicyGet) | **GET** /{merchantId}/returnpolicy/{returnPolicyId} | 
*ContentApiForShopping.ReturnpolicyApi* | [**contentReturnpolicyInsert**](docs/ReturnpolicyApi.md#contentReturnpolicyInsert) | **POST** /{merchantId}/returnpolicy | 
*ContentApiForShopping.ReturnpolicyApi* | [**contentReturnpolicyList**](docs/ReturnpolicyApi.md#contentReturnpolicyList) | **GET** /{merchantId}/returnpolicy | 
*ContentApiForShopping.ReturnpolicyonlineApi* | [**contentReturnpolicyonlineCreate**](docs/ReturnpolicyonlineApi.md#contentReturnpolicyonlineCreate) | **POST** /{merchantId}/returnpolicyonline | 
*ContentApiForShopping.ReturnpolicyonlineApi* | [**contentReturnpolicyonlineDelete**](docs/ReturnpolicyonlineApi.md#contentReturnpolicyonlineDelete) | **DELETE** /{merchantId}/returnpolicyonline/{returnPolicyId} | 
*ContentApiForShopping.ReturnpolicyonlineApi* | [**contentReturnpolicyonlineGet**](docs/ReturnpolicyonlineApi.md#contentReturnpolicyonlineGet) | **GET** /{merchantId}/returnpolicyonline/{returnPolicyId} | 
*ContentApiForShopping.ReturnpolicyonlineApi* | [**contentReturnpolicyonlineList**](docs/ReturnpolicyonlineApi.md#contentReturnpolicyonlineList) | **GET** /{merchantId}/returnpolicyonline | 
*ContentApiForShopping.ReturnpolicyonlineApi* | [**contentReturnpolicyonlinePatch**](docs/ReturnpolicyonlineApi.md#contentReturnpolicyonlinePatch) | **PATCH** /{merchantId}/returnpolicyonline/{returnPolicyId} | 
*ContentApiForShopping.SettlementreportsApi* | [**contentSettlementreportsGet**](docs/SettlementreportsApi.md#contentSettlementreportsGet) | **GET** /{merchantId}/settlementreports/{settlementId} | 
*ContentApiForShopping.SettlementreportsApi* | [**contentSettlementreportsList**](docs/SettlementreportsApi.md#contentSettlementreportsList) | **GET** /{merchantId}/settlementreports | 
*ContentApiForShopping.SettlementtransactionsApi* | [**contentSettlementtransactionsList**](docs/SettlementtransactionsApi.md#contentSettlementtransactionsList) | **GET** /{merchantId}/settlementreports/{settlementId}/transactions | 
*ContentApiForShopping.ShippingsettingsApi* | [**contentShippingsettingsCustombatch**](docs/ShippingsettingsApi.md#contentShippingsettingsCustombatch) | **POST** /shippingsettings/batch | 
*ContentApiForShopping.ShippingsettingsApi* | [**contentShippingsettingsGet**](docs/ShippingsettingsApi.md#contentShippingsettingsGet) | **GET** /{merchantId}/shippingsettings/{accountId} | 
*ContentApiForShopping.ShippingsettingsApi* | [**contentShippingsettingsGetsupportedcarriers**](docs/ShippingsettingsApi.md#contentShippingsettingsGetsupportedcarriers) | **GET** /{merchantId}/supportedCarriers | 
*ContentApiForShopping.ShippingsettingsApi* | [**contentShippingsettingsGetsupportedholidays**](docs/ShippingsettingsApi.md#contentShippingsettingsGetsupportedholidays) | **GET** /{merchantId}/supportedHolidays | 
*ContentApiForShopping.ShippingsettingsApi* | [**contentShippingsettingsGetsupportedpickupservices**](docs/ShippingsettingsApi.md#contentShippingsettingsGetsupportedpickupservices) | **GET** /{merchantId}/supportedPickupServices | 
*ContentApiForShopping.ShippingsettingsApi* | [**contentShippingsettingsList**](docs/ShippingsettingsApi.md#contentShippingsettingsList) | **GET** /{merchantId}/shippingsettings | 
*ContentApiForShopping.ShippingsettingsApi* | [**contentShippingsettingsUpdate**](docs/ShippingsettingsApi.md#contentShippingsettingsUpdate) | **PUT** /{merchantId}/shippingsettings/{accountId} | 
*ContentApiForShopping.ShoppingadsprogramApi* | [**contentShoppingadsprogramGet**](docs/ShoppingadsprogramApi.md#contentShoppingadsprogramGet) | **GET** /{merchantId}/shoppingadsprogram | 
*ContentApiForShopping.ShoppingadsprogramApi* | [**contentShoppingadsprogramRequestreview**](docs/ShoppingadsprogramApi.md#contentShoppingadsprogramRequestreview) | **POST** /{merchantId}/shoppingadsprogram/requestreview | 


## Documentation for Models

 - [ContentApiForShopping.Account](docs/Account.md)
 - [ContentApiForShopping.AccountAddress](docs/AccountAddress.md)
 - [ContentApiForShopping.AccountAdsLink](docs/AccountAdsLink.md)
 - [ContentApiForShopping.AccountAutomaticImprovements](docs/AccountAutomaticImprovements.md)
 - [ContentApiForShopping.AccountBusinessIdentity](docs/AccountBusinessIdentity.md)
 - [ContentApiForShopping.AccountBusinessInformation](docs/AccountBusinessInformation.md)
 - [ContentApiForShopping.AccountConversionSettings](docs/AccountConversionSettings.md)
 - [ContentApiForShopping.AccountCredentials](docs/AccountCredentials.md)
 - [ContentApiForShopping.AccountCustomerService](docs/AccountCustomerService.md)
 - [ContentApiForShopping.AccountGoogleMyBusinessLink](docs/AccountGoogleMyBusinessLink.md)
 - [ContentApiForShopping.AccountIdentifier](docs/AccountIdentifier.md)
 - [ContentApiForShopping.AccountIdentityType](docs/AccountIdentityType.md)
 - [ContentApiForShopping.AccountImageImprovements](docs/AccountImageImprovements.md)
 - [ContentApiForShopping.AccountImageImprovementsSettings](docs/AccountImageImprovementsSettings.md)
 - [ContentApiForShopping.AccountIssue](docs/AccountIssue.md)
 - [ContentApiForShopping.AccountIssueImpact](docs/AccountIssueImpact.md)
 - [ContentApiForShopping.AccountItemUpdates](docs/AccountItemUpdates.md)
 - [ContentApiForShopping.AccountItemUpdatesSettings](docs/AccountItemUpdatesSettings.md)
 - [ContentApiForShopping.AccountLabel](docs/AccountLabel.md)
 - [ContentApiForShopping.AccountReturnCarrier](docs/AccountReturnCarrier.md)
 - [ContentApiForShopping.AccountShippingImprovements](docs/AccountShippingImprovements.md)
 - [ContentApiForShopping.AccountStatus](docs/AccountStatus.md)
 - [ContentApiForShopping.AccountStatusAccountLevelIssue](docs/AccountStatusAccountLevelIssue.md)
 - [ContentApiForShopping.AccountStatusItemLevelIssue](docs/AccountStatusItemLevelIssue.md)
 - [ContentApiForShopping.AccountStatusProducts](docs/AccountStatusProducts.md)
 - [ContentApiForShopping.AccountStatusStatistics](docs/AccountStatusStatistics.md)
 - [ContentApiForShopping.AccountTax](docs/AccountTax.md)
 - [ContentApiForShopping.AccountTaxTaxRule](docs/AccountTaxTaxRule.md)
 - [ContentApiForShopping.AccountUser](docs/AccountUser.md)
 - [ContentApiForShopping.AccountYouTubeChannelLink](docs/AccountYouTubeChannelLink.md)
 - [ContentApiForShopping.AccountsAuthInfoResponse](docs/AccountsAuthInfoResponse.md)
 - [ContentApiForShopping.AccountsClaimWebsiteResponse](docs/AccountsClaimWebsiteResponse.md)
 - [ContentApiForShopping.AccountsCustomBatchRequest](docs/AccountsCustomBatchRequest.md)
 - [ContentApiForShopping.AccountsCustomBatchRequestEntry](docs/AccountsCustomBatchRequestEntry.md)
 - [ContentApiForShopping.AccountsCustomBatchRequestEntryLinkRequest](docs/AccountsCustomBatchRequestEntryLinkRequest.md)
 - [ContentApiForShopping.AccountsCustomBatchResponse](docs/AccountsCustomBatchResponse.md)
 - [ContentApiForShopping.AccountsCustomBatchResponseEntry](docs/AccountsCustomBatchResponseEntry.md)
 - [ContentApiForShopping.AccountsLinkRequest](docs/AccountsLinkRequest.md)
 - [ContentApiForShopping.AccountsLinkResponse](docs/AccountsLinkResponse.md)
 - [ContentApiForShopping.AccountsListLinksResponse](docs/AccountsListLinksResponse.md)
 - [ContentApiForShopping.AccountsListResponse](docs/AccountsListResponse.md)
 - [ContentApiForShopping.AccountsUpdateLabelsRequest](docs/AccountsUpdateLabelsRequest.md)
 - [ContentApiForShopping.AccountsUpdateLabelsResponse](docs/AccountsUpdateLabelsResponse.md)
 - [ContentApiForShopping.AccountstatusesCustomBatchRequest](docs/AccountstatusesCustomBatchRequest.md)
 - [ContentApiForShopping.AccountstatusesCustomBatchRequestEntry](docs/AccountstatusesCustomBatchRequestEntry.md)
 - [ContentApiForShopping.AccountstatusesCustomBatchResponse](docs/AccountstatusesCustomBatchResponse.md)
 - [ContentApiForShopping.AccountstatusesCustomBatchResponseEntry](docs/AccountstatusesCustomBatchResponseEntry.md)
 - [ContentApiForShopping.AccountstatusesListResponse](docs/AccountstatusesListResponse.md)
 - [ContentApiForShopping.AccounttaxCustomBatchRequest](docs/AccounttaxCustomBatchRequest.md)
 - [ContentApiForShopping.AccounttaxCustomBatchRequestEntry](docs/AccounttaxCustomBatchRequestEntry.md)
 - [ContentApiForShopping.AccounttaxCustomBatchResponse](docs/AccounttaxCustomBatchResponse.md)
 - [ContentApiForShopping.AccounttaxCustomBatchResponseEntry](docs/AccounttaxCustomBatchResponseEntry.md)
 - [ContentApiForShopping.AccounttaxListResponse](docs/AccounttaxListResponse.md)
 - [ContentApiForShopping.Action](docs/Action.md)
 - [ContentApiForShopping.ActionReason](docs/ActionReason.md)
 - [ContentApiForShopping.Address](docs/Address.md)
 - [ContentApiForShopping.AlternateDisputeResolution](docs/AlternateDisputeResolution.md)
 - [ContentApiForShopping.Amount](docs/Amount.md)
 - [ContentApiForShopping.AttributionSettings](docs/AttributionSettings.md)
 - [ContentApiForShopping.AttributionSettingsConversionType](docs/AttributionSettingsConversionType.md)
 - [ContentApiForShopping.BestSellers](docs/BestSellers.md)
 - [ContentApiForShopping.Brand](docs/Brand.md)
 - [ContentApiForShopping.Breakdown](docs/Breakdown.md)
 - [ContentApiForShopping.BreakdownRegion](docs/BreakdownRegion.md)
 - [ContentApiForShopping.BuiltInSimpleAction](docs/BuiltInSimpleAction.md)
 - [ContentApiForShopping.BuiltInSimpleActionAdditionalContent](docs/BuiltInSimpleActionAdditionalContent.md)
 - [ContentApiForShopping.BusinessDayConfig](docs/BusinessDayConfig.md)
 - [ContentApiForShopping.BuyOnGoogleProgramStatus](docs/BuyOnGoogleProgramStatus.md)
 - [ContentApiForShopping.CaptureOrderResponse](docs/CaptureOrderResponse.md)
 - [ContentApiForShopping.CarrierRate](docs/CarrierRate.md)
 - [ContentApiForShopping.CarriersCarrier](docs/CarriersCarrier.md)
 - [ContentApiForShopping.CheckoutSettings](docs/CheckoutSettings.md)
 - [ContentApiForShopping.CloudExportAdditionalProperties](docs/CloudExportAdditionalProperties.md)
 - [ContentApiForShopping.Collection](docs/Collection.md)
 - [ContentApiForShopping.CollectionFeaturedProduct](docs/CollectionFeaturedProduct.md)
 - [ContentApiForShopping.CollectionStatus](docs/CollectionStatus.md)
 - [ContentApiForShopping.CollectionStatusDestinationStatus](docs/CollectionStatusDestinationStatus.md)
 - [ContentApiForShopping.CollectionStatusItemLevelIssue](docs/CollectionStatusItemLevelIssue.md)
 - [ContentApiForShopping.CompetitiveVisibility](docs/CompetitiveVisibility.md)
 - [ContentApiForShopping.ConversionSource](docs/ConversionSource.md)
 - [ContentApiForShopping.Css](docs/Css.md)
 - [ContentApiForShopping.CustomAttribute](docs/CustomAttribute.md)
 - [ContentApiForShopping.CustomerReturnReason](docs/CustomerReturnReason.md)
 - [ContentApiForShopping.CutoffTime](docs/CutoffTime.md)
 - [ContentApiForShopping.Datafeed](docs/Datafeed.md)
 - [ContentApiForShopping.DatafeedFetchSchedule](docs/DatafeedFetchSchedule.md)
 - [ContentApiForShopping.DatafeedFormat](docs/DatafeedFormat.md)
 - [ContentApiForShopping.DatafeedStatus](docs/DatafeedStatus.md)
 - [ContentApiForShopping.DatafeedStatusError](docs/DatafeedStatusError.md)
 - [ContentApiForShopping.DatafeedStatusExample](docs/DatafeedStatusExample.md)
 - [ContentApiForShopping.DatafeedTarget](docs/DatafeedTarget.md)
 - [ContentApiForShopping.DatafeedsCustomBatchRequest](docs/DatafeedsCustomBatchRequest.md)
 - [ContentApiForShopping.DatafeedsCustomBatchRequestEntry](docs/DatafeedsCustomBatchRequestEntry.md)
 - [ContentApiForShopping.DatafeedsCustomBatchResponse](docs/DatafeedsCustomBatchResponse.md)
 - [ContentApiForShopping.DatafeedsCustomBatchResponseEntry](docs/DatafeedsCustomBatchResponseEntry.md)
 - [ContentApiForShopping.DatafeedsFetchNowResponse](docs/DatafeedsFetchNowResponse.md)
 - [ContentApiForShopping.DatafeedsListResponse](docs/DatafeedsListResponse.md)
 - [ContentApiForShopping.DatafeedstatusesCustomBatchRequest](docs/DatafeedstatusesCustomBatchRequest.md)
 - [ContentApiForShopping.DatafeedstatusesCustomBatchRequestEntry](docs/DatafeedstatusesCustomBatchRequestEntry.md)
 - [ContentApiForShopping.DatafeedstatusesCustomBatchResponse](docs/DatafeedstatusesCustomBatchResponse.md)
 - [ContentApiForShopping.DatafeedstatusesCustomBatchResponseEntry](docs/DatafeedstatusesCustomBatchResponseEntry.md)
 - [ContentApiForShopping.DatafeedstatusesListResponse](docs/DatafeedstatusesListResponse.md)
 - [ContentApiForShopping.DateTime](docs/DateTime.md)
 - [ContentApiForShopping.DeliveryArea](docs/DeliveryArea.md)
 - [ContentApiForShopping.DeliveryAreaPostalCodeRange](docs/DeliveryAreaPostalCodeRange.md)
 - [ContentApiForShopping.DeliveryTime](docs/DeliveryTime.md)
 - [ContentApiForShopping.Distance](docs/Distance.md)
 - [ContentApiForShopping.ECommercePlatformLinkInfo](docs/ECommercePlatformLinkInfo.md)
 - [ContentApiForShopping.Error](docs/Error.md)
 - [ContentApiForShopping.Errors](docs/Errors.md)
 - [ContentApiForShopping.ExternalAction](docs/ExternalAction.md)
 - [ContentApiForShopping.FreeListingsProgramStatus](docs/FreeListingsProgramStatus.md)
 - [ContentApiForShopping.FreeListingsProgramStatusRegionStatus](docs/FreeListingsProgramStatusRegionStatus.md)
 - [ContentApiForShopping.FreeListingsProgramStatusReviewIneligibilityReasonDetails](docs/FreeListingsProgramStatusReviewIneligibilityReasonDetails.md)
 - [ContentApiForShopping.GenerateRecommendationsResponse](docs/GenerateRecommendationsResponse.md)
 - [ContentApiForShopping.GmbAccounts](docs/GmbAccounts.md)
 - [ContentApiForShopping.GmbAccountsGmbAccount](docs/GmbAccountsGmbAccount.md)
 - [ContentApiForShopping.GoogleAnalyticsLink](docs/GoogleAnalyticsLink.md)
 - [ContentApiForShopping.Headers](docs/Headers.md)
 - [ContentApiForShopping.HolidayCutoff](docs/HolidayCutoff.md)
 - [ContentApiForShopping.HolidaysHoliday](docs/HolidaysHoliday.md)
 - [ContentApiForShopping.InsertCheckoutSettingsRequest](docs/InsertCheckoutSettingsRequest.md)
 - [ContentApiForShopping.Installment](docs/Installment.md)
 - [ContentApiForShopping.InvoiceSummary](docs/InvoiceSummary.md)
 - [ContentApiForShopping.InvoiceSummaryAdditionalChargeSummary](docs/InvoiceSummaryAdditionalChargeSummary.md)
 - [ContentApiForShopping.LabelIds](docs/LabelIds.md)
 - [ContentApiForShopping.LiaAboutPageSettings](docs/LiaAboutPageSettings.md)
 - [ContentApiForShopping.LiaCountrySettings](docs/LiaCountrySettings.md)
 - [ContentApiForShopping.LiaInventorySettings](docs/LiaInventorySettings.md)
 - [ContentApiForShopping.LiaOmnichannelExperience](docs/LiaOmnichannelExperience.md)
 - [ContentApiForShopping.LiaOnDisplayToOrderSettings](docs/LiaOnDisplayToOrderSettings.md)
 - [ContentApiForShopping.LiaPosDataProvider](docs/LiaPosDataProvider.md)
 - [ContentApiForShopping.LiaSettings](docs/LiaSettings.md)
 - [ContentApiForShopping.LiasettingsCustomBatchRequest](docs/LiasettingsCustomBatchRequest.md)
 - [ContentApiForShopping.LiasettingsCustomBatchRequestEntry](docs/LiasettingsCustomBatchRequestEntry.md)
 - [ContentApiForShopping.LiasettingsCustomBatchResponse](docs/LiasettingsCustomBatchResponse.md)
 - [ContentApiForShopping.LiasettingsCustomBatchResponseEntry](docs/LiasettingsCustomBatchResponseEntry.md)
 - [ContentApiForShopping.LiasettingsGetAccessibleGmbAccountsResponse](docs/LiasettingsGetAccessibleGmbAccountsResponse.md)
 - [ContentApiForShopping.LiasettingsListPosDataProvidersResponse](docs/LiasettingsListPosDataProvidersResponse.md)
 - [ContentApiForShopping.LiasettingsListResponse](docs/LiasettingsListResponse.md)
 - [ContentApiForShopping.LiasettingsRequestGmbAccessResponse](docs/LiasettingsRequestGmbAccessResponse.md)
 - [ContentApiForShopping.LiasettingsRequestInventoryVerificationResponse](docs/LiasettingsRequestInventoryVerificationResponse.md)
 - [ContentApiForShopping.LiasettingsSetInventoryVerificationContactResponse](docs/LiasettingsSetInventoryVerificationContactResponse.md)
 - [ContentApiForShopping.LiasettingsSetPosDataProviderResponse](docs/LiasettingsSetPosDataProviderResponse.md)
 - [ContentApiForShopping.LinkService](docs/LinkService.md)
 - [ContentApiForShopping.LinkedAccount](docs/LinkedAccount.md)
 - [ContentApiForShopping.ListAccountLabelsResponse](docs/ListAccountLabelsResponse.md)
 - [ContentApiForShopping.ListAccountReturnCarrierResponse](docs/ListAccountReturnCarrierResponse.md)
 - [ContentApiForShopping.ListCollectionStatusesResponse](docs/ListCollectionStatusesResponse.md)
 - [ContentApiForShopping.ListCollectionsResponse](docs/ListCollectionsResponse.md)
 - [ContentApiForShopping.ListConversionSourcesResponse](docs/ListConversionSourcesResponse.md)
 - [ContentApiForShopping.ListCssesResponse](docs/ListCssesResponse.md)
 - [ContentApiForShopping.ListMethodQuotasResponse](docs/ListMethodQuotasResponse.md)
 - [ContentApiForShopping.ListPromotionResponse](docs/ListPromotionResponse.md)
 - [ContentApiForShopping.ListRegionsResponse](docs/ListRegionsResponse.md)
 - [ContentApiForShopping.ListReturnPolicyOnlineResponse](docs/ListReturnPolicyOnlineResponse.md)
 - [ContentApiForShopping.LocalInventory](docs/LocalInventory.md)
 - [ContentApiForShopping.LocalinventoryCustomBatchRequest](docs/LocalinventoryCustomBatchRequest.md)
 - [ContentApiForShopping.LocalinventoryCustomBatchRequestEntry](docs/LocalinventoryCustomBatchRequestEntry.md)
 - [ContentApiForShopping.LocalinventoryCustomBatchResponse](docs/LocalinventoryCustomBatchResponse.md)
 - [ContentApiForShopping.LocalinventoryCustomBatchResponseEntry](docs/LocalinventoryCustomBatchResponseEntry.md)
 - [ContentApiForShopping.LocationIdSet](docs/LocationIdSet.md)
 - [ContentApiForShopping.LoyaltyPoints](docs/LoyaltyPoints.md)
 - [ContentApiForShopping.MerchantCenterDestination](docs/MerchantCenterDestination.md)
 - [ContentApiForShopping.MerchantOrderReturn](docs/MerchantOrderReturn.md)
 - [ContentApiForShopping.MerchantOrderReturnItem](docs/MerchantOrderReturnItem.md)
 - [ContentApiForShopping.MerchantRejectionReason](docs/MerchantRejectionReason.md)
 - [ContentApiForShopping.MethodQuota](docs/MethodQuota.md)
 - [ContentApiForShopping.Metrics](docs/Metrics.md)
 - [ContentApiForShopping.MinimumOrderValueTable](docs/MinimumOrderValueTable.md)
 - [ContentApiForShopping.MinimumOrderValueTableStoreCodeSetWithMov](docs/MinimumOrderValueTableStoreCodeSetWithMov.md)
 - [ContentApiForShopping.ModelDate](docs/ModelDate.md)
 - [ContentApiForShopping.MonetaryAmount](docs/MonetaryAmount.md)
 - [ContentApiForShopping.OnboardBuyOnGoogleProgramRequest](docs/OnboardBuyOnGoogleProgramRequest.md)
 - [ContentApiForShopping.Order](docs/Order.md)
 - [ContentApiForShopping.OrderAddress](docs/OrderAddress.md)
 - [ContentApiForShopping.OrderCancellation](docs/OrderCancellation.md)
 - [ContentApiForShopping.OrderCustomer](docs/OrderCustomer.md)
 - [ContentApiForShopping.OrderCustomerLoyaltyInfo](docs/OrderCustomerLoyaltyInfo.md)
 - [ContentApiForShopping.OrderCustomerMarketingRightsInfo](docs/OrderCustomerMarketingRightsInfo.md)
 - [ContentApiForShopping.OrderDeliveryDetails](docs/OrderDeliveryDetails.md)
 - [ContentApiForShopping.OrderLineItem](docs/OrderLineItem.md)
 - [ContentApiForShopping.OrderLineItemAdjustment](docs/OrderLineItemAdjustment.md)
 - [ContentApiForShopping.OrderLineItemProduct](docs/OrderLineItemProduct.md)
 - [ContentApiForShopping.OrderLineItemProductFee](docs/OrderLineItemProductFee.md)
 - [ContentApiForShopping.OrderLineItemProductVariantAttribute](docs/OrderLineItemProductVariantAttribute.md)
 - [ContentApiForShopping.OrderLineItemReturnInfo](docs/OrderLineItemReturnInfo.md)
 - [ContentApiForShopping.OrderLineItemShippingDetails](docs/OrderLineItemShippingDetails.md)
 - [ContentApiForShopping.OrderLineItemShippingDetailsMethod](docs/OrderLineItemShippingDetailsMethod.md)
 - [ContentApiForShopping.OrderMerchantProvidedAnnotation](docs/OrderMerchantProvidedAnnotation.md)
 - [ContentApiForShopping.OrderOrderAnnotation](docs/OrderOrderAnnotation.md)
 - [ContentApiForShopping.OrderPickupDetails](docs/OrderPickupDetails.md)
 - [ContentApiForShopping.OrderPickupDetailsCollector](docs/OrderPickupDetailsCollector.md)
 - [ContentApiForShopping.OrderPromotion](docs/OrderPromotion.md)
 - [ContentApiForShopping.OrderPromotionItem](docs/OrderPromotionItem.md)
 - [ContentApiForShopping.OrderRefund](docs/OrderRefund.md)
 - [ContentApiForShopping.OrderReportDisbursement](docs/OrderReportDisbursement.md)
 - [ContentApiForShopping.OrderReportTransaction](docs/OrderReportTransaction.md)
 - [ContentApiForShopping.OrderReturn](docs/OrderReturn.md)
 - [ContentApiForShopping.OrderShipment](docs/OrderShipment.md)
 - [ContentApiForShopping.OrderShipmentLineItemShipment](docs/OrderShipmentLineItemShipment.md)
 - [ContentApiForShopping.OrderShipmentScheduledDeliveryDetails](docs/OrderShipmentScheduledDeliveryDetails.md)
 - [ContentApiForShopping.OrderTrackingSignal](docs/OrderTrackingSignal.md)
 - [ContentApiForShopping.OrderTrackingSignalLineItemDetails](docs/OrderTrackingSignalLineItemDetails.md)
 - [ContentApiForShopping.OrderTrackingSignalShipmentLineItemMapping](docs/OrderTrackingSignalShipmentLineItemMapping.md)
 - [ContentApiForShopping.OrderTrackingSignalShippingInfo](docs/OrderTrackingSignalShippingInfo.md)
 - [ContentApiForShopping.OrderinvoicesCreateChargeInvoiceRequest](docs/OrderinvoicesCreateChargeInvoiceRequest.md)
 - [ContentApiForShopping.OrderinvoicesCreateChargeInvoiceResponse](docs/OrderinvoicesCreateChargeInvoiceResponse.md)
 - [ContentApiForShopping.OrderinvoicesCreateRefundInvoiceRequest](docs/OrderinvoicesCreateRefundInvoiceRequest.md)
 - [ContentApiForShopping.OrderinvoicesCreateRefundInvoiceResponse](docs/OrderinvoicesCreateRefundInvoiceResponse.md)
 - [ContentApiForShopping.OrderinvoicesCustomBatchRequestEntryCreateRefundInvoiceRefundOption](docs/OrderinvoicesCustomBatchRequestEntryCreateRefundInvoiceRefundOption.md)
 - [ContentApiForShopping.OrderinvoicesCustomBatchRequestEntryCreateRefundInvoiceReturnOption](docs/OrderinvoicesCustomBatchRequestEntryCreateRefundInvoiceReturnOption.md)
 - [ContentApiForShopping.OrderreportsListDisbursementsResponse](docs/OrderreportsListDisbursementsResponse.md)
 - [ContentApiForShopping.OrderreportsListTransactionsResponse](docs/OrderreportsListTransactionsResponse.md)
 - [ContentApiForShopping.OrderreturnsAcknowledgeRequest](docs/OrderreturnsAcknowledgeRequest.md)
 - [ContentApiForShopping.OrderreturnsAcknowledgeResponse](docs/OrderreturnsAcknowledgeResponse.md)
 - [ContentApiForShopping.OrderreturnsCreateOrderReturnRequest](docs/OrderreturnsCreateOrderReturnRequest.md)
 - [ContentApiForShopping.OrderreturnsCreateOrderReturnResponse](docs/OrderreturnsCreateOrderReturnResponse.md)
 - [ContentApiForShopping.OrderreturnsLineItem](docs/OrderreturnsLineItem.md)
 - [ContentApiForShopping.OrderreturnsListResponse](docs/OrderreturnsListResponse.md)
 - [ContentApiForShopping.OrderreturnsPartialRefund](docs/OrderreturnsPartialRefund.md)
 - [ContentApiForShopping.OrderreturnsProcessRequest](docs/OrderreturnsProcessRequest.md)
 - [ContentApiForShopping.OrderreturnsProcessResponse](docs/OrderreturnsProcessResponse.md)
 - [ContentApiForShopping.OrderreturnsRefundOperation](docs/OrderreturnsRefundOperation.md)
 - [ContentApiForShopping.OrderreturnsRejectOperation](docs/OrderreturnsRejectOperation.md)
 - [ContentApiForShopping.OrderreturnsReturnItem](docs/OrderreturnsReturnItem.md)
 - [ContentApiForShopping.OrdersAcknowledgeRequest](docs/OrdersAcknowledgeRequest.md)
 - [ContentApiForShopping.OrdersAcknowledgeResponse](docs/OrdersAcknowledgeResponse.md)
 - [ContentApiForShopping.OrdersAdvanceTestOrderResponse](docs/OrdersAdvanceTestOrderResponse.md)
 - [ContentApiForShopping.OrdersCancelLineItemRequest](docs/OrdersCancelLineItemRequest.md)
 - [ContentApiForShopping.OrdersCancelLineItemResponse](docs/OrdersCancelLineItemResponse.md)
 - [ContentApiForShopping.OrdersCancelRequest](docs/OrdersCancelRequest.md)
 - [ContentApiForShopping.OrdersCancelResponse](docs/OrdersCancelResponse.md)
 - [ContentApiForShopping.OrdersCancelTestOrderByCustomerRequest](docs/OrdersCancelTestOrderByCustomerRequest.md)
 - [ContentApiForShopping.OrdersCancelTestOrderByCustomerResponse](docs/OrdersCancelTestOrderByCustomerResponse.md)
 - [ContentApiForShopping.OrdersCreateTestOrderRequest](docs/OrdersCreateTestOrderRequest.md)
 - [ContentApiForShopping.OrdersCreateTestOrderResponse](docs/OrdersCreateTestOrderResponse.md)
 - [ContentApiForShopping.OrdersCreateTestReturnRequest](docs/OrdersCreateTestReturnRequest.md)
 - [ContentApiForShopping.OrdersCreateTestReturnResponse](docs/OrdersCreateTestReturnResponse.md)
 - [ContentApiForShopping.OrdersCustomBatchRequestEntryCreateTestReturnReturnItem](docs/OrdersCustomBatchRequestEntryCreateTestReturnReturnItem.md)
 - [ContentApiForShopping.OrdersCustomBatchRequestEntryRefundItemItem](docs/OrdersCustomBatchRequestEntryRefundItemItem.md)
 - [ContentApiForShopping.OrdersCustomBatchRequestEntryRefundItemShipping](docs/OrdersCustomBatchRequestEntryRefundItemShipping.md)
 - [ContentApiForShopping.OrdersCustomBatchRequestEntryShipLineItemsShipmentInfo](docs/OrdersCustomBatchRequestEntryShipLineItemsShipmentInfo.md)
 - [ContentApiForShopping.OrdersCustomBatchRequestEntryUpdateShipmentScheduledDeliveryDetails](docs/OrdersCustomBatchRequestEntryUpdateShipmentScheduledDeliveryDetails.md)
 - [ContentApiForShopping.OrdersGetByMerchantOrderIdResponse](docs/OrdersGetByMerchantOrderIdResponse.md)
 - [ContentApiForShopping.OrdersGetTestOrderTemplateResponse](docs/OrdersGetTestOrderTemplateResponse.md)
 - [ContentApiForShopping.OrdersInStoreRefundLineItemRequest](docs/OrdersInStoreRefundLineItemRequest.md)
 - [ContentApiForShopping.OrdersInStoreRefundLineItemResponse](docs/OrdersInStoreRefundLineItemResponse.md)
 - [ContentApiForShopping.OrdersListResponse](docs/OrdersListResponse.md)
 - [ContentApiForShopping.OrdersRefundItemRequest](docs/OrdersRefundItemRequest.md)
 - [ContentApiForShopping.OrdersRefundItemResponse](docs/OrdersRefundItemResponse.md)
 - [ContentApiForShopping.OrdersRefundOrderRequest](docs/OrdersRefundOrderRequest.md)
 - [ContentApiForShopping.OrdersRefundOrderResponse](docs/OrdersRefundOrderResponse.md)
 - [ContentApiForShopping.OrdersRejectReturnLineItemRequest](docs/OrdersRejectReturnLineItemRequest.md)
 - [ContentApiForShopping.OrdersRejectReturnLineItemResponse](docs/OrdersRejectReturnLineItemResponse.md)
 - [ContentApiForShopping.OrdersReturnRefundLineItemRequest](docs/OrdersReturnRefundLineItemRequest.md)
 - [ContentApiForShopping.OrdersReturnRefundLineItemResponse](docs/OrdersReturnRefundLineItemResponse.md)
 - [ContentApiForShopping.OrdersSetLineItemMetadataRequest](docs/OrdersSetLineItemMetadataRequest.md)
 - [ContentApiForShopping.OrdersSetLineItemMetadataResponse](docs/OrdersSetLineItemMetadataResponse.md)
 - [ContentApiForShopping.OrdersShipLineItemsRequest](docs/OrdersShipLineItemsRequest.md)
 - [ContentApiForShopping.OrdersShipLineItemsResponse](docs/OrdersShipLineItemsResponse.md)
 - [ContentApiForShopping.OrdersUpdateLineItemShippingDetailsRequest](docs/OrdersUpdateLineItemShippingDetailsRequest.md)
 - [ContentApiForShopping.OrdersUpdateLineItemShippingDetailsResponse](docs/OrdersUpdateLineItemShippingDetailsResponse.md)
 - [ContentApiForShopping.OrdersUpdateMerchantOrderIdRequest](docs/OrdersUpdateMerchantOrderIdRequest.md)
 - [ContentApiForShopping.OrdersUpdateMerchantOrderIdResponse](docs/OrdersUpdateMerchantOrderIdResponse.md)
 - [ContentApiForShopping.OrdersUpdateShipmentRequest](docs/OrdersUpdateShipmentRequest.md)
 - [ContentApiForShopping.OrdersUpdateShipmentResponse](docs/OrdersUpdateShipmentResponse.md)
 - [ContentApiForShopping.PaymentServiceProviderLinkInfo](docs/PaymentServiceProviderLinkInfo.md)
 - [ContentApiForShopping.PickupCarrierService](docs/PickupCarrierService.md)
 - [ContentApiForShopping.PickupServicesPickupService](docs/PickupServicesPickupService.md)
 - [ContentApiForShopping.PosCustomBatchRequest](docs/PosCustomBatchRequest.md)
 - [ContentApiForShopping.PosCustomBatchRequestEntry](docs/PosCustomBatchRequestEntry.md)
 - [ContentApiForShopping.PosCustomBatchResponse](docs/PosCustomBatchResponse.md)
 - [ContentApiForShopping.PosCustomBatchResponseEntry](docs/PosCustomBatchResponseEntry.md)
 - [ContentApiForShopping.PosDataProviders](docs/PosDataProviders.md)
 - [ContentApiForShopping.PosDataProvidersPosDataProvider](docs/PosDataProvidersPosDataProvider.md)
 - [ContentApiForShopping.PosInventory](docs/PosInventory.md)
 - [ContentApiForShopping.PosInventoryRequest](docs/PosInventoryRequest.md)
 - [ContentApiForShopping.PosInventoryResponse](docs/PosInventoryResponse.md)
 - [ContentApiForShopping.PosListResponse](docs/PosListResponse.md)
 - [ContentApiForShopping.PosSale](docs/PosSale.md)
 - [ContentApiForShopping.PosSaleRequest](docs/PosSaleRequest.md)
 - [ContentApiForShopping.PosSaleResponse](docs/PosSaleResponse.md)
 - [ContentApiForShopping.PosStore](docs/PosStore.md)
 - [ContentApiForShopping.PostalCodeGroup](docs/PostalCodeGroup.md)
 - [ContentApiForShopping.PostalCodeRange](docs/PostalCodeRange.md)
 - [ContentApiForShopping.Price](docs/Price.md)
 - [ContentApiForShopping.PriceAmount](docs/PriceAmount.md)
 - [ContentApiForShopping.PriceCompetitiveness](docs/PriceCompetitiveness.md)
 - [ContentApiForShopping.PriceInsights](docs/PriceInsights.md)
 - [ContentApiForShopping.Product](docs/Product.md)
 - [ContentApiForShopping.ProductAmount](docs/ProductAmount.md)
 - [ContentApiForShopping.ProductCertification](docs/ProductCertification.md)
 - [ContentApiForShopping.ProductCluster](docs/ProductCluster.md)
 - [ContentApiForShopping.ProductDeliveryTime](docs/ProductDeliveryTime.md)
 - [ContentApiForShopping.ProductDeliveryTimeAreaDeliveryTime](docs/ProductDeliveryTimeAreaDeliveryTime.md)
 - [ContentApiForShopping.ProductDeliveryTimeAreaDeliveryTimeDeliveryTime](docs/ProductDeliveryTimeAreaDeliveryTimeDeliveryTime.md)
 - [ContentApiForShopping.ProductDimension](docs/ProductDimension.md)
 - [ContentApiForShopping.ProductId](docs/ProductId.md)
 - [ContentApiForShopping.ProductIssue](docs/ProductIssue.md)
 - [ContentApiForShopping.ProductIssueImpact](docs/ProductIssueImpact.md)
 - [ContentApiForShopping.ProductProductDetail](docs/ProductProductDetail.md)
 - [ContentApiForShopping.ProductShipping](docs/ProductShipping.md)
 - [ContentApiForShopping.ProductShippingDimension](docs/ProductShippingDimension.md)
 - [ContentApiForShopping.ProductShippingWeight](docs/ProductShippingWeight.md)
 - [ContentApiForShopping.ProductStatus](docs/ProductStatus.md)
 - [ContentApiForShopping.ProductStatusDestinationStatus](docs/ProductStatusDestinationStatus.md)
 - [ContentApiForShopping.ProductStatusItemLevelIssue](docs/ProductStatusItemLevelIssue.md)
 - [ContentApiForShopping.ProductSubscriptionCost](docs/ProductSubscriptionCost.md)
 - [ContentApiForShopping.ProductTax](docs/ProductTax.md)
 - [ContentApiForShopping.ProductUnitPricingBaseMeasure](docs/ProductUnitPricingBaseMeasure.md)
 - [ContentApiForShopping.ProductUnitPricingMeasure](docs/ProductUnitPricingMeasure.md)
 - [ContentApiForShopping.ProductView](docs/ProductView.md)
 - [ContentApiForShopping.ProductViewItemIssue](docs/ProductViewItemIssue.md)
 - [ContentApiForShopping.ProductViewItemIssueIssueSeverityPerDestination](docs/ProductViewItemIssueIssueSeverityPerDestination.md)
 - [ContentApiForShopping.ProductViewItemIssueItemIssueSeverity](docs/ProductViewItemIssueItemIssueSeverity.md)
 - [ContentApiForShopping.ProductViewItemIssueItemIssueType](docs/ProductViewItemIssueItemIssueType.md)
 - [ContentApiForShopping.ProductWeight](docs/ProductWeight.md)
 - [ContentApiForShopping.ProductsCustomBatchRequest](docs/ProductsCustomBatchRequest.md)
 - [ContentApiForShopping.ProductsCustomBatchRequestEntry](docs/ProductsCustomBatchRequestEntry.md)
 - [ContentApiForShopping.ProductsCustomBatchResponse](docs/ProductsCustomBatchResponse.md)
 - [ContentApiForShopping.ProductsCustomBatchResponseEntry](docs/ProductsCustomBatchResponseEntry.md)
 - [ContentApiForShopping.ProductsListResponse](docs/ProductsListResponse.md)
 - [ContentApiForShopping.ProductstatusesCustomBatchRequest](docs/ProductstatusesCustomBatchRequest.md)
 - [ContentApiForShopping.ProductstatusesCustomBatchRequestEntry](docs/ProductstatusesCustomBatchRequestEntry.md)
 - [ContentApiForShopping.ProductstatusesCustomBatchResponse](docs/ProductstatusesCustomBatchResponse.md)
 - [ContentApiForShopping.ProductstatusesCustomBatchResponseEntry](docs/ProductstatusesCustomBatchResponseEntry.md)
 - [ContentApiForShopping.ProductstatusesListResponse](docs/ProductstatusesListResponse.md)
 - [ContentApiForShopping.Promotion](docs/Promotion.md)
 - [ContentApiForShopping.PromotionPromotionStatus](docs/PromotionPromotionStatus.md)
 - [ContentApiForShopping.PromotionPromotionStatusDestinationStatus](docs/PromotionPromotionStatusDestinationStatus.md)
 - [ContentApiForShopping.PromotionPromotionStatusPromotionIssue](docs/PromotionPromotionStatusPromotionIssue.md)
 - [ContentApiForShopping.PubsubNotificationSettings](docs/PubsubNotificationSettings.md)
 - [ContentApiForShopping.RateGroup](docs/RateGroup.md)
 - [ContentApiForShopping.Recommendation](docs/Recommendation.md)
 - [ContentApiForShopping.RecommendationCallToAction](docs/RecommendationCallToAction.md)
 - [ContentApiForShopping.RecommendationCreative](docs/RecommendationCreative.md)
 - [ContentApiForShopping.RecommendationDescription](docs/RecommendationDescription.md)
 - [ContentApiForShopping.RefundReason](docs/RefundReason.md)
 - [ContentApiForShopping.Region](docs/Region.md)
 - [ContentApiForShopping.RegionGeoTargetArea](docs/RegionGeoTargetArea.md)
 - [ContentApiForShopping.RegionPostalCodeArea](docs/RegionPostalCodeArea.md)
 - [ContentApiForShopping.RegionPostalCodeAreaPostalCodeRange](docs/RegionPostalCodeAreaPostalCodeRange.md)
 - [ContentApiForShopping.RegionalInventory](docs/RegionalInventory.md)
 - [ContentApiForShopping.RegionalinventoryCustomBatchRequest](docs/RegionalinventoryCustomBatchRequest.md)
 - [ContentApiForShopping.RegionalinventoryCustomBatchRequestEntry](docs/RegionalinventoryCustomBatchRequestEntry.md)
 - [ContentApiForShopping.RegionalinventoryCustomBatchResponse](docs/RegionalinventoryCustomBatchResponse.md)
 - [ContentApiForShopping.RegionalinventoryCustomBatchResponseEntry](docs/RegionalinventoryCustomBatchResponseEntry.md)
 - [ContentApiForShopping.RenderAccountIssuesRequestPayload](docs/RenderAccountIssuesRequestPayload.md)
 - [ContentApiForShopping.RenderAccountIssuesResponse](docs/RenderAccountIssuesResponse.md)
 - [ContentApiForShopping.RenderProductIssuesRequestPayload](docs/RenderProductIssuesRequestPayload.md)
 - [ContentApiForShopping.RenderProductIssuesResponse](docs/RenderProductIssuesResponse.md)
 - [ContentApiForShopping.ReportInteractionRequest](docs/ReportInteractionRequest.md)
 - [ContentApiForShopping.ReportRow](docs/ReportRow.md)
 - [ContentApiForShopping.RequestPhoneVerificationRequest](docs/RequestPhoneVerificationRequest.md)
 - [ContentApiForShopping.RequestPhoneVerificationResponse](docs/RequestPhoneVerificationResponse.md)
 - [ContentApiForShopping.RequestReviewFreeListingsRequest](docs/RequestReviewFreeListingsRequest.md)
 - [ContentApiForShopping.RequestReviewShoppingAdsRequest](docs/RequestReviewShoppingAdsRequest.md)
 - [ContentApiForShopping.ReturnAddress](docs/ReturnAddress.md)
 - [ContentApiForShopping.ReturnAddressAddress](docs/ReturnAddressAddress.md)
 - [ContentApiForShopping.ReturnPolicy](docs/ReturnPolicy.md)
 - [ContentApiForShopping.ReturnPolicyOnline](docs/ReturnPolicyOnline.md)
 - [ContentApiForShopping.ReturnPolicyOnlinePolicy](docs/ReturnPolicyOnlinePolicy.md)
 - [ContentApiForShopping.ReturnPolicyOnlineRestockingFee](docs/ReturnPolicyOnlineRestockingFee.md)
 - [ContentApiForShopping.ReturnPolicyOnlineReturnReasonCategoryInfo](docs/ReturnPolicyOnlineReturnReasonCategoryInfo.md)
 - [ContentApiForShopping.ReturnPolicyOnlineReturnShippingFee](docs/ReturnPolicyOnlineReturnShippingFee.md)
 - [ContentApiForShopping.ReturnPolicyPolicy](docs/ReturnPolicyPolicy.md)
 - [ContentApiForShopping.ReturnPolicySeasonalOverride](docs/ReturnPolicySeasonalOverride.md)
 - [ContentApiForShopping.ReturnPricingInfo](docs/ReturnPricingInfo.md)
 - [ContentApiForShopping.ReturnShipment](docs/ReturnShipment.md)
 - [ContentApiForShopping.ReturnShippingLabel](docs/ReturnShippingLabel.md)
 - [ContentApiForShopping.ReturnaddressCustomBatchRequest](docs/ReturnaddressCustomBatchRequest.md)
 - [ContentApiForShopping.ReturnaddressCustomBatchRequestEntry](docs/ReturnaddressCustomBatchRequestEntry.md)
 - [ContentApiForShopping.ReturnaddressCustomBatchResponse](docs/ReturnaddressCustomBatchResponse.md)
 - [ContentApiForShopping.ReturnaddressCustomBatchResponseEntry](docs/ReturnaddressCustomBatchResponseEntry.md)
 - [ContentApiForShopping.ReturnaddressListResponse](docs/ReturnaddressListResponse.md)
 - [ContentApiForShopping.ReturnpolicyCustomBatchRequest](docs/ReturnpolicyCustomBatchRequest.md)
 - [ContentApiForShopping.ReturnpolicyCustomBatchRequestEntry](docs/ReturnpolicyCustomBatchRequestEntry.md)
 - [ContentApiForShopping.ReturnpolicyCustomBatchResponse](docs/ReturnpolicyCustomBatchResponse.md)
 - [ContentApiForShopping.ReturnpolicyCustomBatchResponseEntry](docs/ReturnpolicyCustomBatchResponseEntry.md)
 - [ContentApiForShopping.ReturnpolicyListResponse](docs/ReturnpolicyListResponse.md)
 - [ContentApiForShopping.Row](docs/Row.md)
 - [ContentApiForShopping.SearchRequest](docs/SearchRequest.md)
 - [ContentApiForShopping.SearchResponse](docs/SearchResponse.md)
 - [ContentApiForShopping.Segments](docs/Segments.md)
 - [ContentApiForShopping.Service](docs/Service.md)
 - [ContentApiForShopping.ServiceStoreConfig](docs/ServiceStoreConfig.md)
 - [ContentApiForShopping.ServiceStoreConfigCutoffConfig](docs/ServiceStoreConfigCutoffConfig.md)
 - [ContentApiForShopping.ServiceStoreConfigCutoffConfigLocalCutoffTime](docs/ServiceStoreConfigCutoffConfigLocalCutoffTime.md)
 - [ContentApiForShopping.SettlementReport](docs/SettlementReport.md)
 - [ContentApiForShopping.SettlementTransaction](docs/SettlementTransaction.md)
 - [ContentApiForShopping.SettlementTransactionAmount](docs/SettlementTransactionAmount.md)
 - [ContentApiForShopping.SettlementTransactionAmountCommission](docs/SettlementTransactionAmountCommission.md)
 - [ContentApiForShopping.SettlementTransactionIdentifiers](docs/SettlementTransactionIdentifiers.md)
 - [ContentApiForShopping.SettlementTransactionTransaction](docs/SettlementTransactionTransaction.md)
 - [ContentApiForShopping.SettlementreportsListResponse](docs/SettlementreportsListResponse.md)
 - [ContentApiForShopping.SettlementtransactionsListResponse](docs/SettlementtransactionsListResponse.md)
 - [ContentApiForShopping.ShipmentInvoice](docs/ShipmentInvoice.md)
 - [ContentApiForShopping.ShipmentInvoiceLineItemInvoice](docs/ShipmentInvoiceLineItemInvoice.md)
 - [ContentApiForShopping.ShipmentTrackingInfo](docs/ShipmentTrackingInfo.md)
 - [ContentApiForShopping.ShippingSettings](docs/ShippingSettings.md)
 - [ContentApiForShopping.ShippingsettingsCustomBatchRequest](docs/ShippingsettingsCustomBatchRequest.md)
 - [ContentApiForShopping.ShippingsettingsCustomBatchRequestEntry](docs/ShippingsettingsCustomBatchRequestEntry.md)
 - [ContentApiForShopping.ShippingsettingsCustomBatchResponse](docs/ShippingsettingsCustomBatchResponse.md)
 - [ContentApiForShopping.ShippingsettingsCustomBatchResponseEntry](docs/ShippingsettingsCustomBatchResponseEntry.md)
 - [ContentApiForShopping.ShippingsettingsGetSupportedCarriersResponse](docs/ShippingsettingsGetSupportedCarriersResponse.md)
 - [ContentApiForShopping.ShippingsettingsGetSupportedHolidaysResponse](docs/ShippingsettingsGetSupportedHolidaysResponse.md)
 - [ContentApiForShopping.ShippingsettingsGetSupportedPickupServicesResponse](docs/ShippingsettingsGetSupportedPickupServicesResponse.md)
 - [ContentApiForShopping.ShippingsettingsListResponse](docs/ShippingsettingsListResponse.md)
 - [ContentApiForShopping.ShoppingAdsProgramStatus](docs/ShoppingAdsProgramStatus.md)
 - [ContentApiForShopping.ShoppingAdsProgramStatusRegionStatus](docs/ShoppingAdsProgramStatusRegionStatus.md)
 - [ContentApiForShopping.ShoppingAdsProgramStatusReviewIneligibilityReasonDetails](docs/ShoppingAdsProgramStatusReviewIneligibilityReasonDetails.md)
 - [ContentApiForShopping.Table](docs/Table.md)
 - [ContentApiForShopping.TestOrder](docs/TestOrder.md)
 - [ContentApiForShopping.TestOrderAddress](docs/TestOrderAddress.md)
 - [ContentApiForShopping.TestOrderDeliveryDetails](docs/TestOrderDeliveryDetails.md)
 - [ContentApiForShopping.TestOrderLineItem](docs/TestOrderLineItem.md)
 - [ContentApiForShopping.TestOrderLineItemProduct](docs/TestOrderLineItemProduct.md)
 - [ContentApiForShopping.TestOrderPickupDetails](docs/TestOrderPickupDetails.md)
 - [ContentApiForShopping.TestOrderPickupDetailsPickupPerson](docs/TestOrderPickupDetailsPickupPerson.md)
 - [ContentApiForShopping.TimePeriod](docs/TimePeriod.md)
 - [ContentApiForShopping.TimeZone](docs/TimeZone.md)
 - [ContentApiForShopping.TransitTable](docs/TransitTable.md)
 - [ContentApiForShopping.TransitTableTransitTimeRow](docs/TransitTableTransitTimeRow.md)
 - [ContentApiForShopping.TransitTableTransitTimeRowTransitTimeValue](docs/TransitTableTransitTimeRowTransitTimeValue.md)
 - [ContentApiForShopping.UnitInvoice](docs/UnitInvoice.md)
 - [ContentApiForShopping.UnitInvoiceAdditionalCharge](docs/UnitInvoiceAdditionalCharge.md)
 - [ContentApiForShopping.UnitInvoiceTaxLine](docs/UnitInvoiceTaxLine.md)
 - [ContentApiForShopping.UrlSettings](docs/UrlSettings.md)
 - [ContentApiForShopping.Value](docs/Value.md)
 - [ContentApiForShopping.VerifyPhoneNumberRequest](docs/VerifyPhoneNumberRequest.md)
 - [ContentApiForShopping.VerifyPhoneNumberResponse](docs/VerifyPhoneNumberResponse.md)
 - [ContentApiForShopping.Warehouse](docs/Warehouse.md)
 - [ContentApiForShopping.WarehouseBasedDeliveryTime](docs/WarehouseBasedDeliveryTime.md)
 - [ContentApiForShopping.WarehouseCutoffTime](docs/WarehouseCutoffTime.md)
 - [ContentApiForShopping.Weight](docs/Weight.md)


## Documentation for Authorization


Authentication schemes defined for the API:
### Oauth2


- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/content: Manage your product listings and accounts for Google Shopping

### Oauth2c


- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/content: Manage your product listings and accounts for Google Shopping

